mdapioutput/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AssignedDealership_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealership</label>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerGlobalId__c</fullName>
        <externalId>true</externalId>
        <label>Customer Global Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerProfile_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Profile</label>
        <referenceTo>CustomerProfile__c</referenceTo>
        <relationshipLabel>Leads (Customer Profile)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealerLeadStatus__c</fullName>
        <label>Dealer Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Not Contacted</fullName>
                    <default>true</default>
                    <label>Open - Not Contacted</label>
                </value>
                <value>
                    <fullName>Working - Contacted</fullName>
                </value>
                <value>
                    <fullName>Closed - Converted</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationResponse__c</fullName>
        <label>Integration Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadGlobalExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Lead Global External Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RelatedAccount_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Related Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalaryOrientation__c</fullName>
        <label>Salary Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZeroLightCode__c</fullName>
        <externalId>true</externalId>
        <label>ZeroLight Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <businessProcesses>
        <fullName>Presales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted by Dealer</fullName>
        </values>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Closed Dealer</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Send to Dealer</fullName>
        </values>
    </businessProcesses>
    <recordTypes>
        <fullName>ZeroLightLead</fullName>
        <active>true</active>
        <businessProcess>Presales Lead</businessProcess>
        <label>Zerolight Lead</label>
    </recordTypes>
    <listViews>
        <fullName>Zerolight_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>AssignedDealership_ref__c</columns>
        <columns>DealerLeadStatus__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>Zerolight Leads</label>
    </listViews>
</CustomObject>